--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/property-info": "^6.0",
         "symfony/proxy-manager-bridge": "^6.0",
         "symfony/rate-limiter": "^6.0",
+        "symfony/runtime": "^6.0",
         "symfony/security-bundle": "^6.0",
         "symfony/serializer": "^6.0",
         "symfony/string": "^6.0",
@@ -63,6 +64,12 @@
         "symfony/web-profiler-bundle": "^6.0"
     },
     "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "optimize-autoloader": true,
         "preferred-install": {
             "*": "dist"
         },
@@ -79,17 +86,16 @@
         }
     },
     "replace": {
-        "paragonie/random_compat": "2.*",
         "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
-        "symfony/polyfill-php71": "*",
-        "symfony/polyfill-php70": "*",
-        "symfony/polyfill-php56": "*"
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*"
     },
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink %PUBLIC_DIR%": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
@@ -104,8 +110,8 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": "true",
-            "require": "^6.0"
+            "allow-contrib": false,
+            "require": "6.0.*"
         }
     }
 }
