--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -2,21 +2,15 @@ security:
     enable_authenticator_manager: true
     password_hashers:
         App\Entity\AdminUser: 'sodium'
-
-    role_hierarchy:
-        ROLE_ADMIN:           [ ROLE_USER ]
-
     providers:
         admin_entity_provider:
             entity:
                 class: App\Entity\AdminUser
                 property: email
-
     firewalls:
         dev:
-            pattern:    ^/(_profiler|_wdt|css|js)
-            security:   false
-
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
         admin:
             login_throttling: ~
             pattern: ^/
@@ -32,3 +26,16 @@ security:
             logout:
                 path: umbrella_admin_logout
                 target: umbrella_admin_login
+
+when@test:
+    security:
+        password_hashers:
+            # By default, password hashers are resource intensive and take time. This is
+            # important to generate secure password hashes. In tests however, secure hashes
+            # are not important, waste resources and increase test times. The following
+            # reduces the work factor to the lowest possible values.
+            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
+                algorithm: auto
+                cost: 4 # Lowest possible value for bcrypt
+                time_cost: 3 # Lowest possible value for argon
+                memory_cost: 10 # Lowest possible value for argon
