--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,17 +4,12 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
-        public: false
 
     App\:
-        resource: '../src/*'
+        resource: '../src/'
         exclude:
-            - '../src/Entity'
+            - '../src/Entity/'
             - '../src/Kernel.php'
-
-    App\Controller\:
-        resource: '../src/Controller/'
-        tags: ['controller.service_arguments']
 
     App\Service\FileUploader:
         arguments:
