--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ composer.lock
 ###> symfony/webpack-encore-bundle ###
 /node_modules/
 /public/build/
+/public/ckeditor4/
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
