--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,10 +1,5 @@
 name: Deploy app
-
-on:
-    workflow_run:
-        workflows: ["Test install"]
-        types:
-            - completed
+on: [push]
 
 jobs:
     deploy-project:
