Add missing package to Dockerfile

--- a/docker/symfony/Dockerfile
+++ b/docker/symfony/Dockerfile
@@ -35,6 +35,8 @@ ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
 RUN npm install --global yarn
+RUN apt-get update
+RUN apt-get -y install git p7zip-full
 
 # php extension
 RUN docker-php-ext-install pdo pdo_mysql
