--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-    "devDependencies": {
-        "@babel/eslint-parser": "^7.16.3",
-        "@symfony/webpack-encore": "^1.7.0",
-        "eslint": "^8.2.0",
-        "sass": "^1.43.4",
-        "sass-loader": "^12.3.0"
-    },
-    "dependencies": {
-        "ckeditor4": "^4.16.2",
-        "highlight.js": "^11.3.1"
-    },
-    "scripts": {
-        "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress",
-        "copy-ckeditor": "cp -R node_modules/ckeditor4 public",
-        "lint": "eslint assets",
-        "lint-fix": "eslint assets --fix"
-    }
+  "license": "UNLICENSED",
+  "private": true,
+  "dependencies": {
+    "ckeditor4": "^4.21.0",
+    "highlight.js": "^11.7.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.0",
+    "@babel/eslint-parser": "^7.21.3",
+    "@babel/preset-env": "^7.16.0",
+    "@symfony/webpack-encore": "^4.0.0",
+    "core-js": "^3.23.0",
+    "eslint": "^8.36.0",
+    "regenerator-runtime": "^0.13.9",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.0.0",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "scripts": {
+    "dev-server": "encore dev-server",
+    "dev": "encore dev",
+    "watch": "encore dev --watch",
+    "build": "encore production --progress",
+    "copy-ckeditor": "cp -R node_modules/ckeditor4 public",
+    "lint": "eslint assets",
+    "lint-fix": "eslint assets --fix"
+  }
 }
