--- a/phpstan.neon
+++ b/phpstan.neon
@@ -8,11 +8,8 @@ parameters:
     paths:
         - src/
     checkUninitializedProperties: true
-    checkAlwaysTrueCheckTypeFunctionCall: true
-    checkAlwaysTrueInstanceof: true
-    checkAlwaysTrueStrictComparison: true
     checkInternalClassCaseSensitivity: true
     symfony:
-        container_xml_path: var/cache/dev/App_KernelDevDebugContainer.xml
+        containerXmlPath: var/cache/dev/App_KernelDevDebugContainer.xml
     doctrine:
         objectManagerLoader: tests/object-manager.php
