--- a/composer.json
+++ b/composer.json
@@ -4,63 +4,64 @@
     "type": "project",
     "license": "MIT",
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.5",
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "doctrine/doctrine-migrations-bundle": "^3.2",
-        "knplabs/knp-time-bundle": "^1.18",
+        "doctrine/dbal": "^3.9.4",
+        "doctrine/doctrine-bundle": "^2.13.2",
+        "doctrine/doctrine-fixtures-bundle": "^4.0",
+        "doctrine/doctrine-migrations-bundle": "^3.4.1",
+        "doctrine/orm": "^3.3.2",
+        "knplabs/knp-time-bundle": "^2.4",
         "stof/doctrine-extensions-bundle": "^1.7",
-        "symfony/asset": "^6.0",
-        "symfony/config": "^6.0",
-        "symfony/console": "^6.0",
-        "symfony/doctrine-messenger": "^6.0",
-        "symfony/dotenv": "^6.0",
-        "symfony/error-handler": "^6.0",
-        "symfony/expression-language": "^6.0",
+        "symfony/asset": "6.4.*",
+        "symfony/config": "6.4.*",
+        "symfony/console": "6.4.*",
+        "symfony/doctrine-messenger": "6.4.*",
+        "symfony/dotenv": "6.4.*",
+        "symfony/error-handler": "6.4.*",
+        "symfony/expression-language": "6.4.*",
         "symfony/flex": "^2.0",
-        "symfony/form": "^6.0",
-        "symfony/framework-bundle": "^6.0",
-        "symfony/http-client": "^6.0",
-        "symfony/intl": "^6.0",
-        "symfony/lock": "^6.0",
-        "symfony/mailer": "^6.0",
-        "symfony/messenger": "^6.0",
+        "symfony/form": "6.4.*",
+        "symfony/framework-bundle": "6.4.*",
+        "symfony/http-client": "6.4.*",
+        "symfony/intl": "6.4.*",
+        "symfony/lock": "6.4.*",
+        "symfony/mailer": "6.4.*",
+        "symfony/messenger": "6.4.*",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/process": "^6.0",
-        "symfony/property-access": "^6.0",
-        "symfony/property-info": "^6.0",
-        "symfony/proxy-manager-bridge": "^6.0",
-        "symfony/rate-limiter": "^6.0",
-        "symfony/runtime": "^6.0",
-        "symfony/security-bundle": "^6.0",
-        "symfony/serializer": "^6.0",
-        "symfony/string": "^6.0",
-        "symfony/translation": "^6.0",
-        "symfony/twig-bundle": "^6.0",
-        "symfony/validator": "^6.0",
-        "symfony/web-link": "^6.0",
-        "symfony/webpack-encore-bundle": "^1.16",
-        "symfony/yaml": "^6.0",
+        "symfony/process": "6.4.*",
+        "symfony/property-access": "6.4.*",
+        "symfony/property-info": "6.4.*",
+        "symfony/rate-limiter": "6.4.*",
+        "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
+        "symfony/serializer": "6.4.*",
+        "symfony/string": "6.4.*",
+        "symfony/translation": "6.4.*",
+        "symfony/twig-bundle": "6.4.*",
+        "symfony/validator": "6.4.*",
+        "symfony/web-link": "6.4.*",
+        "symfony/webpack-encore-bundle": "^v2.2",
+        "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0",
         "umbrella2/adminbundle": "dev-master",
         "umbrella2/corebundle": "dev-master",
-        "vich/uploader-bundle": "^1.18"
+        "vich/uploader-bundle": "^2.5"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.6",
-        "phpstan/phpstan": "^1.2",
-        "phpstan/phpstan-doctrine": "^1.1",
-        "phpstan/phpstan-symfony": "^1.1",
+        "friendsofphp/php-cs-fixer": "^3.70",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^6.0",
-        "symfony/css-selector": "^6.0",
-        "symfony/debug-bundle": "^6.0",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
+        "symfony/debug-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.36",
-        "symfony/phpunit-bridge": "^6.0",
-        "symfony/web-profiler-bundle": "^6.0"
+        "symfony/phpunit-bridge": "6.4.*",
+        "symfony/web-profiler-bundle": "6.4.*"
     },
     "config": {
         "allow-plugins": {
@@ -110,7 +111,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "^6.0"
+            "require": "6.4.*"
         }
     }
 }
