--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "@babel/core": "^7.17.0",
     "@babel/eslint-parser": "^7.21.3",
     "@babel/preset-env": "^7.16.0",
-    "@symfony/webpack-encore": "^4.0.0",
-    "core-js": "^3.23.0",
+    "@symfony/webpack-encore": "^5.0.0",
+    "core-js": "^3.38.0",
     "eslint": "^8.36.0",
     "regenerator-runtime": "^0.13.9",
-    "sass": "^1.60.0",
-    "sass-loader": "^13.0.0",
+    "sass": "^1.85.1",
+    "sass-loader": "^16.0.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "dev-server": "encore dev-server",
@@ -26,5 +27,6 @@
     "copy-ckeditor": "cp -R node_modules/ckeditor4 public",
     "lint": "eslint assets",
     "lint-fix": "eslint assets --fix"
-  }
+  },
+  "packageManager": "yarn@4.7.0"
 }
