--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default
 ###< symfony/messenger ###
 
 ###> symfony/lock ###
-LOCK_DSN=semaphore
+LOCK_DSN=flock
 ###< symfony/lock ###
 
 ###> symfony/mailer ###
