--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -57,11 +57,8 @@ jobs:
           bin/console doctrine:schema:create
           bin/console doctrine:fixtures:load --no-interaction
           php bin/console d:s:v --skip-sync
-      ## —— Yarn ————————————————————————————————————————————————————————————
-      - name: Yarn install / build
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20'
-      - run: |
-          yarn install
-          yarn encore production
+      ## —— Asset mapper ————————————————————————————————————————————————————————————
+      - name: import asset
+        run: |
+          bin/console importmap:install
+          bin/console asset-map:compile
