--- a/config/packages/stof_doctrine_extensions.yaml
+++ b/config/packages/stof_doctrine_extensions.yaml
@@ -4,4 +4,5 @@ stof_doctrine_extensions:
     default_locale: en_US
     orm:
         default:
+            timestampable: true
             tree: true
