--- a/composer.json
+++ b/composer.json
@@ -14,36 +14,36 @@
         "doctrine/orm": "^3.3.2",
         "knplabs/knp-time-bundle": "^2.4",
         "stof/doctrine-extensions-bundle": "^1.7",
-        "symfony/asset": "6.4.*",
-        "symfony/asset-mapper": "6.4.*",
-        "symfony/config": "6.4.*",
-        "symfony/console": "6.4.*",
-        "symfony/doctrine-messenger": "6.4.*",
-        "symfony/dotenv": "6.4.*",
-        "symfony/error-handler": "6.4.*",
-        "symfony/expression-language": "6.4.*",
+        "symfony/asset": "^6.4|^7.0",
+        "symfony/asset-mapper": "^6.4|^7.0",
+        "symfony/config": "^6.4|^7.0",
+        "symfony/console": "^6.4|^7.0",
+        "symfony/doctrine-messenger": "^6.4|^7.0",
+        "symfony/dotenv": "^6.4|^7.0",
+        "symfony/error-handler": "^6.4|^7.0",
+        "symfony/expression-language": "^6.4|^7.0",
         "symfony/flex": "^2.0",
-        "symfony/form": "6.4.*",
-        "symfony/framework-bundle": "6.4.*",
-        "symfony/http-client": "6.4.*",
-        "symfony/intl": "6.4.*",
-        "symfony/lock": "6.4.*",
-        "symfony/mailer": "6.4.*",
-        "symfony/messenger": "6.4.*",
+        "symfony/form": "^6.4|^7.0",
+        "symfony/framework-bundle": "^6.4|^7.0",
+        "symfony/http-client": "^6.4|^7.0",
+        "symfony/intl": "^6.4|^7.0",
+        "symfony/lock": "^6.4|^7.0",
+        "symfony/mailer": "^6.4|^7.0",
+        "symfony/messenger": "^6.4|^7.0",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/process": "6.4.*",
-        "symfony/property-access": "6.4.*",
-        "symfony/property-info": "6.4.*",
-        "symfony/rate-limiter": "6.4.*",
-        "symfony/runtime": "6.4.*",
-        "symfony/security-bundle": "6.4.*",
-        "symfony/serializer": "6.4.*",
-        "symfony/string": "6.4.*",
-        "symfony/translation": "6.4.*",
-        "symfony/twig-bundle": "6.4.*",
-        "symfony/validator": "6.4.*",
-        "symfony/web-link": "6.4.*",
-        "symfony/yaml": "6.4.*",
+        "symfony/process": "^6.4|^7.0",
+        "symfony/property-access": "^6.4|^7.0",
+        "symfony/property-info": "^6.4|^7.0",
+        "symfony/rate-limiter": "^6.4|^7.0",
+        "symfony/runtime": "^6.4|^7.0",
+        "symfony/security-bundle": "^6.4|^7.0",
+        "symfony/serializer": "^6.4|^7.0",
+        "symfony/string": "^6.4|^7.0",
+        "symfony/translation": "^6.4|^7.0",
+        "symfony/twig-bundle": "^6.4|^7.0",
+        "symfony/validator": "^6.4|^7.0",
+        "symfony/web-link": "^6.4|^7.0",
+        "symfony/yaml": "^6.4|^7.0",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0",
         "umbrella2/admin-bundle": "dev-master",
@@ -55,12 +55,12 @@
         "phpstan/phpstan-doctrine": "^2.0",
         "phpstan/phpstan-symfony": "^2.0",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.4.*",
-        "symfony/css-selector": "6.4.*",
-        "symfony/debug-bundle": "6.4.*",
+        "symfony/browser-kit": "^6.4|^7.0",
+        "symfony/css-selector": "^6.4|^7.0",
+        "symfony/debug-bundle": "^6.4|^7.0",
         "symfony/maker-bundle": "^1.36",
-        "symfony/phpunit-bridge": "6.4.*",
-        "symfony/web-profiler-bundle": "6.4.*"
+        "symfony/phpunit-bridge": "^6.4|^7.0",
+        "symfony/web-profiler-bundle": "^6.4|^7.0"
     },
     "config": {
         "allow-plugins": {
@@ -111,7 +111,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.4.*"
+            "require": "^6.4"
         }
     }
 }
