--- a/.github/workflows/install.yaml
+++ b/.github/workflows/install.yaml
@@ -4,19 +4,16 @@ on: [push]
 jobs:
   install-project:
     name: Symfony (PHP ${{ matrix.php-versions }})
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: true
       matrix:
         php-versions: ['8.2']
     steps:
-      # —— Setup Github actions —————————————————————————————————————————————
-      # https://github.com/actions/checkout (official)
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: 'Checkout code'
+        uses: actions/checkout@v4
 
-      # https://github.com/shivammathur/setup-php (community)
-      - name: Setup PHP, extensions and composer with shivammathur/setup-php
+      - name: 'Setup PHP, extensions and composer'
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
@@ -24,35 +21,33 @@ jobs:
         env:
           update: true
 
-      - name: Check PHP Version
+      - name: 'Check PHP Version'
         run: php -v
 
-      # —— Composer‍️ —————————————————————————————————————————————————————————
-      - name: Validate composer.json and composer.lock
+      - name: 'Validate composer.json and composer.lock'
         run: composer validate
 
-      - name: Get composer cache directory
+      - name: 'Get composer cache directory'
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
-      - name: Cache composer dependencies
+      - name: 'Cache composer dependencies'
         uses: actions/cache@v4
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Install Composer dependencies
+      - name: 'Install Composer dependencies'
         run: composer install
       - name: Compile assets
         run: bin/console asset-map:compile
 
-      # —— Symfony ——————————————————————————————————————————————————————————
-      - name: Check the Symfony console
+      - name: 'Check the Symfony console'
         run: |
           bin/console about
-      # —— Doctrine ——————————————————————————————————————————————————————————
-      - name: Check doctrine requirments
+
+      - name: 'Check doctrine requirments'
         run: |
           echo 'DATABASE_URL="sqlite:///%kernel.project_dir%/var/database.sqlite"' > .env.local
           bin/console doctrine:database:create
